fix(youtube): expose SABR init metadata